mikrofon ve arama iconunun yeri degistirildi

--- a/index.html
+++ b/index.html
@@ -29,14 +29,23 @@
           <img src="./images/googlelogo.png" alt="google" />
         </div>
         <div class="arama">
-          <img src="./images/magnifying_glass.jpg" alt="arama" width="30px" />
+          <img
+            class="ara"
+            src="./images/magnifying_glass.jpg"
+            alt="arama"
+            width="30px"
+            height="30px"
+          />
 
-          <a href="#">
-            <img
+          <a href="#"
+            ><img
+              class="mik"
               src="./images/google_microphone.png"
               alt="mikrofon"
-              width="20px"
-          /></a>
+              width="15px"
+              height="20px"
+            />
+          </a>
         </div>
         <div class="aciklama">
           <a class="bir" href="#">Google Search</a>
