Ich habe input hinzugefügt

--- a/index.html
+++ b/index.html
@@ -21,43 +21,41 @@
           <a class="bulanik" href="# ">
             <img src="./images/appicon.png" alt="kareimge"
           /></a>
-          <a class="mavi" href="#">Sign In</a>
+          <button>Sign In</button>
+          <!-- <a class="mavi" href="#">Sign In</a> -->
         </div>
       </div>
       <main>
-        <div class="google">
-          <img src="./images/googlelogo.png" alt="google" />
-        </div>
-        <div class="arama">
-          <img
-            class="ara"
-            src="./images/magnifying_glass.jpg"
-            alt="arama"
-            width="30px"
-            height="30px"
-          />
+        <img class="google-logo" src="./images/googlelogo.png" alt="" />
 
-          <a href="#"
-            ><img
-              class="mik"
+        <div class="search-bar">
+          <img
+            class="buyutec"
+            src="./images/magnifying_glass.jpg"
+            alt=""
+            width="30px"
+          />
+          <input
+            class="input"
+            type="search"
+            placeholder="Mit Google suchen oder eine URL eingeben"
+          />
+          <a href="#">
+            <img
+              class="mikrofon"
               src="./images/google_microphone.png"
-              alt="mikrofon"
+              alt=""
               width="15px"
-              height="20px"
             />
           </a>
         </div>
-        <div class="aciklama">
-          <a class="bir" href="#">Google Search</a>
-          <a class="iki" href="#"> I'm Feeling Lucky</a>
+        <div class="main-button-div">
+          <button>Google Search</button>
+          <button>I'm Feeling Lucky</button>
         </div>
-        <div>
-          <p>
-            Other Languages you can use Google:
-            <span> <a href="#">English</a> </span>
-          </p>
-        </div>
+        <p>Other Languages you can use Google: <a href="#">Englisch</a></p>
       </main>
+
       <footer>
         <div class="tr">Turkey</div>
         <div class="son">
